--- a/docs/20250918_journals2025.md
+++ b/docs/20250918_journals2025.md
@@ -16,7 +16,7 @@
 
 ## ⭐⭐⭐ 三星級 
 
-### 偏重理論創新
+### 應用統計學期刊
 
 此類期刊是理論發展的驅動者，專注於發表奠基性、高度抽象的計量模式與統計理論，對數學和統計推導的要求極高。這些期刊的文章往往具有開創性，能夠影響整個領域的發展方向，適合資深研究者與理論工作者投稿。
 
@@ -24,10 +24,11 @@
 | ------------------------------------------------------------ | ---------------- | -------------------- | ---------------- | ------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | [*Psychometrika*](https://www.cambridge.org/core/journals/psychometrika) (P11A) | Cambridge        | Psychometric Society | 4期 (約 40-50篇) | IRT, Bayes, NP, RT | 致力於將心理學發展為一門定量理性科學，是心理計量學理論發展的殿堂。 | 網路心理計量學・高維度資料・機器學習應用・貝氏方法・試題反應理論 |
 | [*British Journal of Mathematical and Statistical Psychology*](https://bpspsychub.onlinelibrary.wiley.com/journal/20448317) (BMSP) | Wiley            | BPS                  | 3期 (約 20-30篇) | Bayes, RT          | 展示數學與統計心理學的最佳成果，透過數理方法促進心理學理解。 | 貝氏統計・認知模式・網路分析・反應時間模式・縱貫資料分析     |
+| [*Journal of Educational and Behavioral Statistics*](https://journals.sagepub.com/home/jeb) (JEBS) | SAGE   | AERA & ASA | 6期 (約 30-40篇) | Bayes, NP | 刊登針對行為與教育科學的統計方法和模式論文，強調文章的及時性與長期影響力。 | 認知診斷模式・教育中的因果推論・AI/機器學習應用・多層次模式・貝氏網路 |
 
-**評述：** *Psychometrika* 作為計量心理學的創始期刊，至今仍是理論創新的重要平台；*BMSP* 則以其數理統計的嚴謹性著稱。
+**評述：** *Psychometrika* 作為計量心理學的創始期刊，至今仍是理論創新的重要平台；*BMSP* 則以其數理統計的嚴謹性著稱。*JEBS* 作為AERA與ASA聯合發行的期刊，在教育統計領域享有崇高地位。該期刊的特色在於要求文章必須同時具備統計方法學的創新性與教育實務的相關性，是連接統計理論與教育應用的重要橋樑。對於從事教育資料科學研究的學者而言，這是最重要的投稿目標之一。
 
-### 偏重方法與軟體
+### 理論與實務並重，偏重方法與軟體
 
 此類期刊是前沿研究方法的傳播中心，不僅發表創新的研究技術，也經常伴隨可供重現的軟體或程式碼，強調方法的可操作性與實用性。這類期刊特別重視研究的可重複性與開放科學精神。
 
@@ -35,27 +36,22 @@
 | ------------------------------------------------------------ | -------- | ------------------- | ------------------ | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | [*Behavior Research Methods*](https://link.springer.com/journal/13428) (BRM) | Springer | Psychonomic Society | 6期 (約 180-240篇) | RT       | 刊登實驗心理學研究的方法、技術與工具性論文，特別強調電腦科技在研究中的應用。 | AI/機器學習・自然語言處理・R/Python套件・資料視覺化・線上實驗 |
 | [*Psychological Methods*](https://www.apa.org/pubs/journals/met) (PM) | APA              | APA                  | 4期 (約 35-45篇) | NP                 | 專注於心理學資料收集、分析、理解與解釋的方法學發展與傳播。   | 因果推論・縱貫資料分析・機器學習方法・遺漏資料・測量不變性   |
-
+| [*Multivariate Behavioral Research*](https://www.tandfonline.com/journals/hmbr20) (MBR) | Taylor & Francis | SMEP                 | 6期 (約 50-60篇) |                    | 主要刊登多變量方法學及其在行為科學問題應用的研究論文。       | 縱貫模式・心理計量網路・機器學習・因素分析・結構方程模式     |
 
 
 **評述：** *BRM* 在方法學期刊中具有獨特地位，它不僅是篇數最多的期刊之一，更是程式開發者和工具創建者的首選平台。該期刊特別歡迎附有開源程式碼的投稿，對於想要推廣自己開發的統計套件或研究工具的學者而言，這是最佳的發表平台。近年來隨著開放科學運動的興起，該期刊的重要性持續提升。*Psychological Methods* 是APA體系中方法學的旗艦期刊。
+而 *SEM* 和 *MBR* 則分別在結構方程模式和多變量分析領域具有重要地位。這些期刊的共同特色是對統計理論的深度要求，適合具備紮實數理基礎的研究者挑戰。
 
-### 理論與實務並重
+## ⭐⭐ 二星級
 
-此類期刊在理論嚴謹性與實務應用價值之間取得平衡，旨在將先進的計量方法應用於解決重要的教育與心理問題。這類期刊通常要求文章既有理論貢獻，也要展現實際應用價值。
+Measurement.
 
-| 期刊 (縮寫)                                                  | 出版社 | 學會       | 年發行量         | 個人關注  | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
-| ------------------------------------------------------------ | ------ | ---------- | ---------------- | --------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| [*Journal of Educational and Behavioral Statistics*](https://journals.sagepub.com/home/jeb) (JEBS) | SAGE   | AERA & ASA | 6期 (約 30-40篇) | Bayes, NP | 刊登針對行為與教育科學的統計方法和模式論文，強調文章的及時性與長期影響力。 | 認知診斷模式・教育中的因果推論・AI/機器學習應用・多層次模式・貝氏網路 |
-| [*Structural Equation Modeling*](https://www.tandfonline.com/journals/hsem20) (SEM) | Taylor & Francis | -                    | 6期 (約 50-60篇) | Bayes              | 刊登結構方程模式（SEM）各個面向的論文，包含新技術、模式與應用。 | 貝氏SEM・多層次SEM・調節與中介・成長混合模式・潛在類別分析   |
-| [*Multivariate Behavioral Research*](https://www.tandfonline.com/journals/hmbr20) (MBR) | Taylor & Francis | SMEP                 | 6期 (約 50-60篇) |                    | 主要刊登多變量方法學及其在行為科學問題應用的研究論文。       | 縱貫模式・心理計量網路・機器學習・因素分析・結構方程模式     |
+| 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
+| ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| [*Applied Psychological Measurement*](https://journals.sagepub.com/home/apm) (APM) | SAGE             | -    | 6期 (約 30-40篇) | IRT      | 刊登前沿的方法學研究及其在社會與行為科學中的應用。           | 多維度IRT・認知診斷模式・測驗連結・電腦化適性測驗・個人適配度 |
+| [*Journal of Educational Measurement*](https://onlinelibrary.wiley.com/journal/17453984) (JEDM) | Wiley            | NCME | 4期 (約 30-40篇) | IRT      | 刊登教育測量理論、方法學與實務的原創研究，是 NCME 的旗艦期刊之一。 | 歷程資料分析・自動化評分・適性測驗(CAT)・測驗公平性・認知診斷模式 |
 | [*Educational and Psychological Measurement*](https://journals.sagepub.com/home/epm) (EPM) | SAGE             | -    | 6期 (約 60-70篇) | IRT      | 刊登教育與心理學領域測量工具開發與使用的學術論文，特別關注效度與信度。 | 量表發展與驗證・信度與效度・IRT應用・因素結構・測量不變性    |
-
-
-**評述：** *JEBS* 作為AERA與ASA聯合發行的期刊，在教育統計領域享有崇高地位。該期刊的特色在於要求文章必須同時具備統計方法學的創新性與教育實務的相關性，是連接統計理論與教育應用的重要橋樑。對於從事教育資料科學研究的學者而言，這是最重要的投稿目標之一。而 *SEM* 和 *MBR* 則分別在結構方程模式和多變量分析領域具有重要地位。這些期刊的共同特色是對統計理論的深度要求，適合具備紮實數理基礎的研究者挑戰。
-
-
-
+| [*Structural Equation Modeling*](https://www.tandfonline.com/journals/hsem20) (SEM) | Taylor & Francis | -                    | 6期 (約 50-60篇) | Bayes              | 刊登結構方程模式（SEM）各個面向的論文，包含新技術、模式與應用。 | 貝氏SEM・多層次SEM・調節與中介・成長混合模式・潛在類別分析   |
 
 
 ---
@@ -78,18 +74,12 @@
 
 此類期刊是評量領域的核心，涵蓋從測驗開發、效度驗證到評量政策等廣泛議題，是多數應用型研究者的主要投稿目標。這些期刊在學術品質與實務相關性之間取得良好平衡。
 
-Measurement.
-
-| 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
-| ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| [*Applied Psychological Measurement*](https://journals.sagepub.com/home/apm) (APM) | SAGE             | -    | 6期 (約 30-40篇) | IRT      | 刊登前沿的方法學研究及其在社會與行為科學中的應用。           | 多維度IRT・認知診斷模式・測驗連結・電腦化適性測驗・個人適配度 |
-| [*Journal of Educational Measurement*](https://onlinelibrary.wiley.com/journal/17453984) (JEDM) | Wiley            | NCME | 4期 (約 30-40篇) | IRT      | 刊登教育測量理論、方法學與實務的原創研究，是 NCME 的旗艦期刊之一。 | 歷程資料分析・自動化評分・適性測驗(CAT)・測驗公平性・認知診斷模式 |
-| [*Assessment in Education: Principles, Policy & Practice*](https://www.tandfonline.com/journals/caie20) (AIE) | Taylor & Francis | -    | 4期 (約 25-30篇) |          | 關注評量的原則、政策與實務，以及它們之間的相互關係。         | 評量政策・形成性評量・學生中心評量・績效責任・促進學習的評量 |
 
 Assessment.
 
 | 期刊 (縮寫)                                                  | 出版社           | 學會 | 年發行量         | 個人關注 | 導向特色                                                     | 近五年重要主題（五個關鍵詞）                                 |
 | ------------------------------------------------------------ | ---------------- | ---- | ---------------- | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| [*Assessment in Education: Principles, Policy & Practice*](https://www.tandfonline.com/journals/caie20) (AIE) | Taylor & Francis | -    | 4期 (約 25-30篇) |          | 關注評量的原則、政策與實務，以及它們之間的相互關係。         | 評量政策・形成性評量・學生中心評量・績效責任・促進學習的評量 |
 | [*European Journal of Psychological Assessment*](https://www.hogrefe.com/us/journal/european-journal-of-psychological-assessment) (EJPA) | Hogrefe          | EAPA | 6期 (約 50-60篇) |          | 歐洲心理評量學會的官方期刊，反映歐洲學術界的觀點與研究動態。 | 跨文化評量・人格衡鑑・智力與認知評估・評量方法學・測驗應用   |
 | [*Journal of Psychoeducational Assessment*](https://journals.sagepub.com/home/jpa) (JPA) | SAGE             | -    | 8期 (約 60-80篇) |          | 刊登心理與教育領域評量工具的發展、使用與驗證研究。           | 衡鑑工具效度・測量不變性・特殊需求評估・診斷準確性・認知評估 |
 | [*Educational Assessment*](https://www.tandfonline.com/journals/hesa20) (ES) | Taylor & Francis | -    | 4期 (約 20-25篇) |          | 刊登教育評量的設計、發展與使用相關研究，涵蓋課室到大規模評量。 | 課室評量・AI應用・教師評量素養・形成性評量・回饋             |
