--- a/docs/20250918_journals2025.md
+++ b/docs/20250918_journals2025.md
@@ -6,7 +6,7 @@
 
 ## 前言與使用說明
 
-本指南彙整了教育測量與心理計量領域的重要期刊，依據期刊的學術聲望、理論貢獻與實務影響力進行分級。三星級期刊代表該領域的頂尖刊物，具有極高的學術地位與影響力；二星級期刊為該領域的重要刊物，兼具理論深度與實務價值；一星級期刊則偏重特定應用領域或新興議題。建議研究者根據自己的研究主題與職涯發展階段，選擇適合的投稿目標。
+本指南彙整了教育測量與心理計量領域的重要期刊，依據期刊的學術聲望、理論貢獻、實務影響力、以及個人的偏見進行分級。三星級期刊代表該領域的頂尖刊物，具有最高的學術地位與影響力；二星級期刊為該領域的核心刊物，兼具理論深度與實務價值；一星級期刊則偏重特定應用領域或新興議題。建議研究者根據自己的研究主題與職涯發展階段，選擇適合的投稿目標。
 
 ---
 
