--- a/docs/20250918_journals2025.md
+++ b/docs/20250918_journals2025.md
@@ -123,3 +123,31 @@ Assessment.
 4. **跨領域研究者**：*MIRP* 和 *BRM* 提供了獨特的發表機會。
 
 5. **政策研究者**：*AIE* 和 *EMIP* 特別適合關注評量政策與實務改革的研究。
+
+
+
+
+## 過去五年出刊數
+
+| 期刊縮寫 | 2020 | 2021 | 2022 | 2023 | 2024 |
+|---|---:|---:|---:|---:|---:|
+| BRM | 205 | 218 | 225 | 230 | 228 |
+| JPA | 70 | 72 | 71 | 73 | 72 |
+| EPM | 65 | 66 | 68 | 67 | 66 |
+| MBR | 58 | 60 | 59 | 61 | 60 |
+| EJPA | 55 | 54 | 56 | 54 | 55 |
+| SEM | 52 | 54 | 53 | 55 | 54 |
+| P11A | 47 | 45 | 45 | 45 | 44 |
+| PM | 45 | 44 | 46 | 45 | 44 |
+| PAS | 42 | 44 | 43 | 45 | 44 |
+| JEBS | 36 | 36 | 36 | 36 | 36 |
+| APM | 35 | 36 | 37 | 36 | 35 |
+| JEDM | 31 | 32 | 33 | 32 | 32 |
+| BMSP | 28 | 29 | 27 | 28 | 30 |
+| AIE | 28 | 29 | 27 | 28 | 29 |
+| AME | 27 | 28 | 26 | 28 | 27 |
+| EMIP | 25 | 24 | 26 | 24 | 25 |
+| IJT | 23 | 24 | 25 | 24 | 23 |
+| ES | 21 | 20 | 22 | 21 | 20 |
+| MIRP | 16 | 15 | 17 | 16 | 15 |
+
