--- a/docs/20250918_journals2025.md
+++ b/docs/20250918_journals2025.md
@@ -83,6 +83,8 @@ Assessment.
 | [*European Journal of Psychological Assessment*](https://www.hogrefe.com/us/journal/european-journal-of-psychological-assessment) (EJPA) | Hogrefe          | EAPA | 6期 (約 50-60篇) |          | 歐洲心理評量學會的官方期刊，反映歐洲學術界的觀點與研究動態。 | 跨文化評量・人格衡鑑・智力與認知評估・評量方法學・測驗應用   |
 | [*Journal of Psychoeducational Assessment*](https://journals.sagepub.com/home/jpa) (JPA) | SAGE             | -    | 8期 (約 60-80篇) |          | 刊登心理與教育領域評量工具的發展、使用與驗證研究。           | 衡鑑工具效度・測量不變性・特殊需求評估・診斷準確性・認知評估 |
 | [*Educational Assessment*](https://www.tandfonline.com/journals/hesa20) (ES) | Taylor & Francis | -    | 4期 (約 20-25篇) |          | 刊登教育評量的設計、發展與使用相關研究，涵蓋課室到大規模評量。 | 課室評量・AI應用・教師評量素養・形成性評量・回饋             |
+|[*Large-scale Assessments in Education*](https://largescaleassessmentsineducation.springeropen.com/)|SpringerOne|IERI|||||
+
 
 **評述：** 這組期刊構成了評量研究的主力軍，各有其特色定位。*EJPA* 代表歐洲觀點，在跨文化研究方面特別強勢；*APM* 和 *JEDM* 是IRT研究者的重要平台；*AIE* 則更關注評量政策層面；*JPA* 在特殊教育評量領域具有重要地位；*EPM* 是傳統的測量期刊，歷史悠久；*Educational Assessment* 則聚焦於課室評量實務。這些期刊為不同研究取向的學者提供了多元的發表管道。
 
